Fix tests on java 17. Remove keycloak-remote maven profile Closes #436 Closes #437